--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "matplotlib >= 3.10.1",
     "numpy >= 2.2.4",
     "pandas >= 2.2.3",
+    "platformdirs >= 4.3.8",
     "polars >= 1.31.0",
     "py7zr >= 0.22.0",
     "pyarrow >= 19.0.1",
