--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 # pyproject.toml
 
 [build-system]
-requires      = ["setuptools>=61.0.0", "wheel"]
+requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "mobisurvstd"
-version = "0.2.0"
+version = "0.3.0"
 description = "A tool to standardize French mobility survey datasets (EMC2, EGT, EMP, etc.) into a unified format."
 readme = "README.md"
 authors = [{ name = "Lucas Javaudin", email = "lucas@lucasjavaudin.com" }]
@@ -15,7 +15,7 @@ license-files = ["LICENSE.md"]
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Topic :: File Formats"
+    "Topic :: File Formats",
 ]
 keywords = ["mobility survey", "polars", "data format"]
 dependencies = [
@@ -39,4 +39,4 @@ requires-python = ">=3.10"
 Homepage = "https://github.com/MobiSurvStd/MobiSurvStd"
 Documentation = "https://mobisurvstd.github.io/MobiSurvStd/index.html"
 Repository = "https://github.com/MobiSurvStd/MobiSurvStd"
-Issues =  "https://github.com/MobiSurvStd/MobiSurvStd/issues"
+Issues = "https://github.com/MobiSurvStd/MobiSurvStd/issues"
