--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ keywords = ["mobility survey", "polars", "data format"]
 dependencies = [
     "Cartopy >= 0.24.1",
     "fastexcel >= 0.14.0",
+    "fsspec>=2025.9.0",
     "geopandas >= 1.0.1",
     "humanize >= 4.13.0",
     "loguru >= 0.7.3",
