update mdbook to 0.5.0

--- a/docs/book.toml
+++ b/docs/book.toml
@@ -10,7 +10,4 @@ preferred-dark-theme = "navy"
 smart-punctuation = true
 mathjax-support = false
 git-repository-url = "https://github.com/LucasJavaudin/MobiSurvStd"
-git-repository-icon = "fa-github"
-# site-url = "/example-book/"
-additional-css = ["theme/pagetoc.css"]
-additional-js = ["theme/pagetoc.js"]
+git-repository-icon = "fab-github"
