--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,14 +22,14 @@ dependencies = [
     "Cartopy >= 0.24.1",
     "fastexcel >= 0.14.0",
     "fsspec>=2025.9.0",
-    "geopandas >= 1.0.1",
+    "geopandas>=1.0.1",
     "humanize >= 4.13.0",
     "loguru >= 0.7.3",
     "matplotlib >= 3.10.1",
     "numpy >= 2.2.4",
     "pandas >= 2.2.3",
     "platformdirs >= 4.3.8",
-    "polars >= 1.33.0",
+    "polars>=1.33.0",
     "py7zr >= 0.20.8",
     "pyarrow >= 19.0.1",
     "requests >= 2.32.3",
@@ -41,6 +41,7 @@ requires-python = ">=3.10"
 [dependency-groups]
 dev = [
     "ipython>=8.37.0",
+    "pytest>=9.0.2",
     "ty>=0.0.15",
 ]
 
